# MapFlow

./: .geminiignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CI_CD_README.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_SUMMARY.md  JULES_AUTOMATION_FIX.md  Makefile.toml  README.MD  README.md  ROADMAP.md  ROADMAP_2.0.md  Roadmap_2.0.md  build_check.txt  build_errors.txt  check_err.txt  check_err_pr137.txt  check_error.txt  check_ffmpeg.rs  check_final.txt  check_final_2.txt  check_final_3.txt  check_final_effect_params.txt  check_links.py  check_output.txt  check_readmes.py  check_results.txt  check_status.txt  check_status_2.txt  check_super_final_3.txt  check_ui.txt  check_ui_2.txt  check_workspace_log.txt  ci_trigger.txt  (+41 more)
.Jules/: lina-styleui.md  mary-styleux.md
.agent/: AGENTS.md
.cargo/: audit.toml
.github/: FEEDBACK_ADDRESSED.md  HOW_TO_CREATE_ISSUES.md  ISSUES_TO_CREATE.md  JULES_API_SETUP.md  JULES_AUTOMATION_COMPLETE.md  JULES_INTEGRATION.md  JULES_ISSUES_EXPLANATION.md  README.md  README_CICD.md  SETUP_GUIDE.md  WORKFLOW_CONTROL.md  WORKFLOW_QUICKREF.md  automation-config.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  pre-commit-hook.sh  workflows.config.yml
.jules/: JULES_INTEGRATION.md  JULES_ISSUES_EXPLANATION.md  SETUP_GUIDE.md  archivist.md  bolt.md  guardian.md  jules_gpu_ui.md  knowledge.md  lina-styleui.md  mary-styleux.md  palette.md  scribe.md  sentinel.md  tracker.md
.temp-archive/: 2026-01-02-.mapmap_autosave  2026-01-02-VERSION.txt  2026-01-02-check_effect_params.txt  2026-01-02-check_final.txt  2026-01-02-check_full.txt  2026-01-02-check_full_2.txt  2026-01-02-check_full_3.txt  2026-01-02-check_super_final.txt  2026-01-02-check_super_final_2.txt  2026-01-02-check_super_final_4.txt  2026-01-02-check_super_final_5.txt  2026-01-02-check_super_final_6.txt  (+4 more)
crates/mapmap-bevy/: Cargo.toml  README.md
crates/mapmap-bevy/src/: camera.rs  components.rs  lib.rs  model.rs  particles.rs  resources.rs  shapes.rs  systems.rs  text.rs
crates/mapmap-control/: Cargo.toml  README.md
crates/mapmap-control/src/: error.rs  lib.rs  link.rs  manager.rs  target.rs
crates/mapmap-control/src/cue/: crossfade.rs  cue.rs  cue_list.rs  mod.rs  triggers.rs
crates/mapmap-control/src/dmx/: artnet.rs  channels.rs  fixtures.rs  mod.rs  sacn.rs
crates/mapmap-control/src/hue/: audio_interface.rs  controller.rs  engine.rs  mod.rs  models.rs
crates/mapmap-control/src/hue/api/: client.rs  discovery.rs  error.rs  groups.rs  mod.rs
crates/mapmap-control/src/hue/effects/: mod.rs
crates/mapmap-control/src/hue/stream/: dtls.rs  manager.rs  mod.rs  protocol.rs
crates/mapmap-control/src/midi/: clock.rs  controller_element.rs  ecler_nuo4.rs  input.rs  learn.rs  mapping.rs  midi_learn.rs  mod.rs  output.rs  profiles.rs
crates/mapmap-control/src/osc/: address.rs  client.rs  learn.rs  mapping.rs  mapping_tests.rs  mod.rs  server.rs  types.rs
crates/mapmap-control/src/router/: trigger_router.rs
crates/mapmap-control/src/shortcuts/: bindings.rs  macros.rs  mod.rs  shortcuts.rs
crates/mapmap-control/src/web/: auth.rs  handlers.rs  mod.rs  routes.rs  server.rs  websocket.rs
crates/mapmap-core/: Cargo.toml  README.md
crates/mapmap-core/src/: animation.rs  assignment.rs  audio.rs  audio_media_pipeline.rs  audio_reactive.rs  codegen.rs  diagnostics.rs  effect_animation.rs  effects.rs  history.rs  layer.rs  lib.rs  logging.rs  lut.rs  macros.rs  mapping.rs  media_library.rs  mesh.rs  module.rs  module_eval.rs  module_eval.rs.rej  monitor.rs  oscillator.rs  output.rs  paint.rs  recent_effect_configs.rs  shader_graph.rs  state.rs  trigger_system.rs
crates/mapmap-core/src/audio/: analyzer_v2.rs  backend.rs  mod.rs
crates/mapmap-core/src/layer/: composition.rs  mod.rs
crates/mapmap-core/src/module/: config.rs  manager.rs  types.rs
crates/mapmap-core/src/module/types/: mesh.rs  mod.rs  shared_media.rs  trigger.rs
crates/mapmap-core/tests/: assignment_tests.rs  audio_pipeline_tests.rs  layer_tests.rs  module_coverage_tests.rs  module_logic_tests.rs  module_playback_tests.rs  module_tests.rs  state_tests.rs  trackline_tests.rs  trigger_eval_tests.rs  trigger_logic_tests.rs  trigger_system_tests.rs  trigger_tests.rs
crates/mapmap-ffi/: Cargo.toml  README.md
crates/mapmap-ffi/src/: lib.rs
crates/mapmap-io/: Cargo.toml  README.md
crates/mapmap-io/src/: converter.rs  error.rs  format.rs  lib.rs  project.rs  project_format.rs  sink.rs  source.rs
crates/mapmap-io/src/decklink/: mod.rs
crates/mapmap-io/src/ndi/: mod.rs
crates/mapmap-io/src/spout/: mod.rs
crates/mapmap-io/src/stream/: encoder.rs  mod.rs  rtmp.rs  srt.rs
crates/mapmap-io/src/syphon/: mod.rs
crates/mapmap-io/src/virtual_camera/: mod.rs
crates/mapmap-io/tests/: project_tests.rs
crates/mapmap-mcp/: Cargo.toml  README.md
crates/mapmap-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/mapmap-mcp/src/tools/: handlers.rs  registry.rs
crates/mapmap-media/: Cargo.toml  README.md
crates/mapmap-media/benches/: video_decode.rs
crates/mapmap-media/src/: decoder.rs  hap_decoder.rs  hap_player.rs  image_decoder.rs  lib.rs  mpv_decoder.rs  pipeline.rs  player.rs  sequence.rs
crates/mapmap-media/tests/: gif_limit_tests.rs
crates/mapmap-render/: Cargo.toml  README.md
crates/mapmap-render/benches/: mesh_renderer_bench.rs  texture_upload.rs
crates/mapmap-render/shaders/: effect_blur.wgsl  effect_chromatic_aberration.wgsl  effect_edge_detect.wgsl  effect_pixelate.wgsl  effect_vignette.wgsl  ycocg_to_rgb.wgsl
crates/mapmap-render/src/: backend.rs  color_calibration_renderer.rs  compositor.rs  compressed_texture.rs  edge_blend_renderer.rs  effect_chain_renderer.rs  hot_reload.rs  lib.rs  mesh_buffer_cache.rs  mesh_renderer.rs  oscillator_renderer.rs  paint_texture_cache.rs  pipeline.rs  preset.rs  quad.rs  shader.rs  shader_graph_integration.rs  spout.rs  texture.rs
crates/mapmap-render/tests/: effect_chain_integration_tests.rs  effect_chain_tests.rs  multi_output_tests.rs
docs/: 05_ROADMAP.MD  (+10 more)
(+494 files in other folders)
