[package]
name = "mapmap-bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
# Bevy - disabling default features to avoid audio/ui bloat if not needed yet
bevy = { version = "0.14", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_scene",
    "bevy_winit", # Needed for WinitPlugin / loop runner, even if headless
    "x11", # Explicitly add standard backends if needed, or rely on defaults
    "wayland",
    "tonemapping_luts",
] }
bevy_atmosphere = "0.9"

# Extensions
bevy_enoki = "0.2"
bevy_mod_outline = "0.8"
hexx = "0.24"

mapmap-core = { path = "../mapmap-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
