[package]
name = "mapmap-bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
# Bevy 0.16 stabilization
bevy = { version = "0.16", default-features = false, features = [
    "bevy_text",
    "bevy_ui",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "x11",
    "wayland",
    "tonemapping_luts",
] }

# Extensions compatible with Bevy 0.16
bevy_atmosphere = "0.13"
# bevy_enoki = "0.5" # Disabled due to version mismatch (skips 0.16 support)
bevy_mod_outline = "0.10.3"
hexx = "0.24" # Version compatible with Bevy 0.16

mapmap-core = { path = "../mapmap-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
# wgpu = { workspace = true } # Use Bevy's re-exported wgpu to avoid conflicts
