[package]
name = "mapmap-bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
# Bevy 0.15 Downgrade to align with egui/wgpu v23
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "x11",
    "wayland",
    "tonemapping_luts",
] }

# Extensions compatible with Bevy 0.15
bevy_atmosphere = "0.12"
# bevy_enoki = "0.5" # Disabled due to version mismatch
bevy_mod_outline = "0.9"
hexx = "0.17" # Version compatible with Bevy 0.15

mapmap-core = { path = "../mapmap-core" }
rand = "0.9.2"
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true } # Use Bevy's re-exported wgpu to avoid conflicts
