[package]
name = "mapmap-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["midi", "osc"]
midi = ["midir"]
osc = ["rosc"]
http-api = ["axum", "tokio", "tower", "tower-http", "futures", "http"]
full = ["midi", "osc", "http-api"]

[dependencies]

# HTTP API (optional)
axum = { workspace = true, optional = true, features = ["ws"] }
futures = { version = "0.3", optional = true }
hex = { workspace = true }
# Security
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = { workspace = true }

# DMX dependencies
uuid = { version = "1.10", features = ["v4"] }
