[package]
name = "mapmap-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["midi", "osc"]
midi = ["midir"]
osc = ["rosc"]
http-api = ["axum", "tower", "tower-http", "futures", "http"]
link = ["ableton-link-rs"]
full = ["midi", "osc", "http-api", "link"]

[dependencies]
ableton-link-rs = { workspace = true, optional = true }
anyhow = "1.0"
axum = { workspace = true, optional = true, features = ["ws"] }
futures = { version = "0.3", optional = true }
hex = { workspace = true }
http = { version = "1.1", optional = true }
midir = { workspace = true, optional = true }
openssl = { version = "0.10", features = ["vendored"] }
palette = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rosc = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
