[package]
name = "mapmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
cpal = { workspace = true, optional = true }
rustfft = { workspace = true }
hound = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
chrono = "0.4"
tracing = { workspace = true }
winit = { workspace = true, optional = true }

# Audio Analysis (Phase 1 Migration)
audio-processor-analysis = "2.4"
audio-processor-traits = "4.3"
num-traits = "0.2"
num-complex = "0.4"

# Professional BPM/Key Detection
stratum-dsp = "1.0"


[features]
default = ["audio"]
audio = ["cpal"]
winit = ["dep:winit"]
mock-audio = []

[dev-dependencies]
proptest = { workspace = true }
